# currycarbon

./: .gitignore  CHANGELOG.md  Currycarbon-CLI-RunCalibrate.html  Currycarbon-CalCurves-Intcal20.html  Currycarbon-Calibration-Bchron.html  Currycarbon-Calibration-Calibration.html  Currycarbon-Calibration-MatrixMult.html  Currycarbon-Calibration-Utils.html  Currycarbon-Calibration.html  Currycarbon-Parsers.html  Currycarbon-SumCalibration.html  Currycarbon-Types.html  Currycarbon-Utils.html  Currycarbon.html  LICENSE  README.md  cabal.project  currycarbon.cabal  currycarbon.haddock  currycarbon.txt  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  (+7 more)
.github/workflows/: normalCheck.yml  release.yml
data/: README.md  marine20.14c
playground/: normalization_test.R  oxcal_comparison.R  test.R
presentations/: .gitignore  CAA2022_LittleMinions.md  README.md
src/: Currycarbon.CLI.RunCalibrate.html  Currycarbon.CalCurves.Intcal20.html  Currycarbon.Calibration.Bchron.html  Currycarbon.Calibration.Calibration.html  Currycarbon.Calibration.MatrixMult.html  Currycarbon.Calibration.Utils.html  Currycarbon.Calibration.html  Currycarbon.Parsers.html  Currycarbon.SumCalibration.html  Currycarbon.Types.html  Currycarbon.Utils.html  Currycarbon.hs  Currycarbon.html
src-executables/: Main-currycarbon.hs
src/Currycarbon/: CalCurves.hs  Calibration.hs  ParserHelpers.hs  Parsers.hs  SumCalibration.hs  Types.hs  Utils.hs
src/Currycarbon/CLI/: CLICalibrate.hs  Calibrate.hs  RunCalibrate.hs
src/Currycarbon/CalCurves/: Intcal20.hs
src/Currycarbon/Calibration/: Bchron.hs  Calibration.hs  MatrixMult.hs  Utils.hs
test/: GoldenSpec.hs  Main.hs  ParserSpec.hs  Spec.hs
test/golden/: cal_curve_seg_file.sh  cli_error_behaviour.sh  density_file.sh  hdr_file.sh  samples_file.sh  single_radiocarbon_date.sh  tricky_expressions.sh
test/golden/actual_data/: cal_curve_seg_file.tsv  density_file.tsv  hdr_file.tsv  samples_file.tsv
test/golden/data/: hdr_file.tsv
test/golden/expected_data/: cli_error_behaviour.out  density_file.tsv  single_radiocarbon_date.out  tricky_expressions.out
