name:                currycarbon
version:             0.22.0
synopsis:            A package for simple, fast radiocarbon calibration
description:         Radiocarbon calibration with the intercept method optimised for fast calibration of many dates.
license:             MIT
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Archaeoinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    Currycarbon.Parsers, Currycarbon.Types, Currycarbon.Utils,
                        Currycarbon.CLI.RunCalibrate, Currycarbon.CalCurves.Intcal20, 
                        Currycarbon.Calibration.Utils, Currycarbon.Calibration.MatrixMult, 
                        Currycarbon.Calibration.Bchron, Currycarbon.Calibration.Calibration
    hs-source-dirs:     src
    build-depends:      base, filepath, parsec, vector, statistics, bytestring
    default-language:   Haskell2010

executable currycarbon
    main-is:            Main-currycarbon.hs
    hs-source-dirs:     src-executables
    build-depends:      currycarbon, base, optparse-applicative, filepath
    other-modules:      Paths_currycarbon
    default-language:   Haskell2010
    ghc-options:        -O2 -threaded -with-rtsopts=-N

Test-Suite currycarbon-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      currycarbon, base, doctest
    default-language:   Haskell2010
    ghc-options:        -O2 -threaded -with-rtsopts=-N